Move to non-free-firmware/admin section.
Move source and binary from non-free/admin to non-free-firmware/admin
following the 2022 General Resolution about non-free firmware.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+amd64-microcode (3.20220411.2) UNRELEASED; urgency=medium
+
+  * Move source and binary from non-free/admin to non-free-firmware/admin
+    following the 2022 General Resolution about non-free firmware.
+
+ -- Cyril Brulebois <kibi@debian.org>  Mon, 16 Jan 2023 23:04:51 +0000
+
 amd64-microcode (3.20220411.1) unstable; urgency=medium
 
   * Update package data from linux-firmware 20220411:
