README: update for new release
Update README with the updated amd-ucode release.

Remove stray whitespace

--- a/README
+++ b/README
@@ -8,18 +8,48 @@ the newest of either amd-ucode or amd-sev.
 
 latest commits in this release:
 
+commit 0bc3126c9cfa0b8c761483215c25382f831a7c6f
+Author: John Allen <john.allen@amd.com>
+Date:   Wed Jul 19 19:17:57 2023 +0000
+
+    linux-firmware: Update AMD fam17h cpu microcode
+
+    * Update AMD cpu microcode for processor family 17h
+
+    Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
+    Key ID          = F328AE73
+    Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
+
+    Signed-off-by: John Allen <john.allen@amd.com>
+    Signed-off-by: Josh Boyer <jwboyer@kernel.org>
+
+commit b250b32ab1d044953af2dc5e790819a7703b7ee6
+Author: John Allen <john.allen@amd.com>
+Date:   Tue Jul 18 23:19:59 2023 +0000
+
+    linux-firmware: Update AMD cpu microcode
+
+    * Update AMD cpu microcode for processor family 19h
+
+    Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
+    Key ID          = F328AE73
+    Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
+
+    Signed-off-by: John Allen <john.allen@amd.com>
+    Signed-off-by: Josh Boyer <jwboyer@kernel.org>
+
 commit 69143e8eca62a80b9791b8d358d1cc4c90e373c9
 Author: John Allen <john.allen@amd.com>
 Date:   Fri Apr 14 16:13:58 2023 +0000
 
     linux-firmware: Update AMD cpu microcode
-    
+
     * Update AMD cpu microcode for processor family 17h
-    
+
     Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
     Key ID          = F328AE73
     Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
-    
+
     Signed-off-by: John Allen <john.allen@amd.com>
     Signed-off-by: Josh Boyer <jwboyer@kernel.org>
 
@@ -28,13 +58,13 @@ Author: John Allen <john.allen@amd.com>
 Date:   Tue Jan 31 20:13:41 2023 +0000
 
     linux-firmware: Update AMD cpu microcode
-    
+
     * Update AMD cpu microcode for processor family 19h
-    
+
     Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
     Key ID          = F328AE73
     Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
-    
+
     Signed-off-by: John Allen <john.allen@amd.com>
     Signed-off-by: Josh Boyer <jwboyer@kernel.org>
 
@@ -43,13 +73,13 @@ Author: John Allen <john.allen@amd.com>
 Date:   Fri Sep 30 15:51:00 2022 +0000
 
     linux-firmware: Update AMD cpu microcode
-    
+
     * Update AMD cpu microcode for processor family 19h
-    
+
     Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
     Key ID          = F328AE73
     Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
-    
+
     Signed-off-by: John Allen <john.allen@amd.com>
     Signed-off-by: Josh Boyer <jwboyer@kernel.org>
 
@@ -58,10 +88,10 @@ Author: John Allen <john.allen@amd.com>
 Date:   Tue Aug 9 20:29:50 2022 +0000
 
     Add amd-ucode README file
-    
+
     Create new README file describing the microcode patch levels included in the
     microcode container files in the amd-ucode directory.
-    
+
     Signed-off-by: John Allen <john.allen@amd.com>
     [WHENCE entry added by Josh Boyer <jwboyer@kernel.org>
     Signed-off-by: Josh Boyer <jwboyer@kernel.org>
